--- a/starter-code/app.css
+++ b/starter-code/app.css
@@ -177,6 +177,7 @@ body {
     background-color: var(--light-full-saturationwhite);
     padding: 1em;
     border-radius: 2%;
+    width: 75%;
 }
 
 .profile-info {
@@ -192,6 +193,12 @@ body {
 .form-control {
     border: none;
  }
+
+
+.br-checkpoint {
+    align-self: center;
+}
+
 
 #basic-addon1 {
     background-color: var(--light-nosaturation-white);
@@ -213,7 +220,17 @@ body {
     }
 
     .lor-content {
-        grid-column: 1/3;
+        grid-column: 1/-1;
+        font-size: .7rem;
     }
-    
+
+
+    .desc-lst-row {
+        width: 100%;
+    }
+
+   .profile-info, .d-block {
+       font-size: .7rem;     
+   }
+
 }
