Added a little tweak to settle some issues

--- a/app.css
+++ b/app.css
@@ -134,7 +134,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: var(--light-nosaturation-white);
-    border-radius: 1%;
+    border-radius: .25rem;
     height: min-content;
 }
 
